<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/toolbar_background">

            <ImageButton
                android:id="@+id/button_Back"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/back"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                />

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_toRightOf="@+id/button_Back"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsize_title"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="10dp"
            android:text="@string/add_recipient"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize_header"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/button_Complete"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textSize="@dimen/textsize_header"
            android:textAllCaps="false"
            android:background="@drawable/buttonroundborder"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:text="@string/complete"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button_Complete"
            android:layout_below="@+id/title"
            android:layout_marginBottom="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/title"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">
                    <EditText
                        android:id="@+id/editText_FirstName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:inputType="text"
                        android:hint="@string/firstname"
                        android:background="@drawable/background_edittext2"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">
                    <EditText
                        android:id="@+id/editText_LastName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:inputType="text"
                        android:hint="@string/last_name"
                        android:background="@drawable/background_edittext2"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">
                    <EditText
                        android:id="@+id/editText_Address"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:inputType="text"
                        android:hint="@string/address"
                        android:background="@drawable/background_edittext2"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">
                    <EditText
                        android:id="@+id/editText_City"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:inputType="text"
                        android:hint="@string/city"
                        android:background="@drawable/background_edittext2"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">
                    <EditText
                        android:id="@+id/editText_State"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:inputType="text"
                        android:hint="@string/state"
                        android:background="@drawable/background_edittext2"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.reginald.editspinner.EditSpinner
                        android:id="@+id/spinner_Reason"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:inputType="text"
                        android:hint="@string/reason_for_sending"
                        app:dropDownDrawable="@mipmap/down"
                        app:dropDownDrawableSpacing="15dp"
                        app:dropDownDrawableWidth="25dp"
                        app:dropDownDrawableHeight="25dp"
                        android:background="@drawable/background_edittext2"/>
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
