<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginBottom="50dp"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_Letsgetstarted"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textSize="@dimen/textsize_header"
            android:textAllCaps="false"
            android:background="@drawable/buttonroundborder"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:text="@string/Let_s_get_started"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/des2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_money_des2"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/button_Letsgetstarted"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/des1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_money_des1"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/des2"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_money"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/des1"
            android:layout_marginBottom="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/title">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@mipmap/home_artwork"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"/>
            <ImageView
                android:layout_width="80dp"
                android:layout_height="189dp"
                android:src="@mipmap/home_decoleft"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|bottom">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="150dp"
                android:src="@mipmap/home_decoright"
                android:layout_marginBottom="240dp"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
