<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/button_Complete"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textSize="@dimen/textsize_header"
            android:textAllCaps="false"
            android:background="@drawable/buttonroundborder"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:text="@string/back_to_homepage"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">


            <RelativeLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:src="@mipmap/help_center"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/textview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_center"
                    android:textSize="@dimen/textsize_header0"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/image"/>

                <TextView
                    android:id="@+id/textview_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/help_center_description"
                    android:textSize="@dimen/textsize_title"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/textview_title"/>

            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
