<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/button_Complete"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textSize="@dimen/textsize_header"
            android:textAllCaps="false"
            android:background="@drawable/buttonroundborder"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:text="@string/complete"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">


            <RelativeLayout
                android:layout_width="340dp"
                android:layout_height="289dp"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/login"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:id="@+id/textView_Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resetpassword"
                        android:textSize="@dimen/textsize_header"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="30dp"/>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp">
                        <EditText
                            android:id="@+id/editText_Email"
                            android:layout_width="260dp"
                            android:layout_height="40dp"
                            android:paddingRight="45dp"
                            android:paddingLeft="20dp"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:hint="@string/email"
                            android:background="@drawable/background_edittext"/>
                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_alignRight="@+id/editText_Email"
                            android:layout_marginRight="20dp"
                            android:layout_centerVertical="true"
                            android:background="@mipmap/icon_email"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp">
                        <TextView
                            android:layout_marginRight="20dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/resetpassword_message"
                            android:gravity="center"/>
                    </RelativeLayout>

                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
